dynamix/force-app/main/default/objects/Price_Details__c/Price_Details__c.object-meta.xml
<CustomObject>
    <label>Price Details</label>
    <nameField>
        <label>Price Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>