dynamix/force-app/main/default/objects/Price_Details__c/fields/Accountable_Charges_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Accountable_Charges_Checkbox__c</fullName>
    <formula>if( Charge_Group__c == &apos;Others&apos; &amp;&amp;( Name == &apos;Share Money&apos; || Name == &apos;Share money&apos; || Name == &apos;Security maintenance deposit&apos; ),True,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountable Charges Checkbox</label>
    <type>Checkbox</type>
</CustomField>