dynamix/force-app/main/default/objects/Price_Details__c/fields/Additional_Car_Bike_Parking__c.field-meta.xml
<CustomField>
    <fullName>Additional_Car_Bike_Parking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional  Car/Bike Parking</label>
    <type>Checkbox</type>
</CustomField>