dynamix/force-app/main/default/objects/Price_Details__c/fields/Amount_after_discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_after_discount__c</fullName>
    <formula>Amount__c - Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>