dynamix/force-app/main/default/objects/Price_Details__c/fields/Charge_Group__c.field-meta.xml
<CustomField>
    <fullName>Charge_Group__c</fullName>
    <label>Charge Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>