dynamix/force-app/main/default/objects/Price_Details__c/fields/GST_Calculated__c.field-meta.xml
<CustomField>
    <fullName>GST_Calculated__c</fullName>
    <formula>Amount_after_discount__c *GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>