dynamix/force-app/main/default/objects/Price_Details__c/fields/GST_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_Type__c</fullName>
    <label>GST Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>