dynamix/force-app/main/default/objects/Price_Details__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parking</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Property__c.Flat_Type__c</field>
            <operation>equals</operation>
            <value>CAR PARKING, BIKE PARKING</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Price Details</relationshipLabel>
    <relationshipName>Price_Details</relationshipName>
    <type>Lookup</type>
</CustomField>