dynamix/force-app/main/default/objects/Price_Details__c/fields/Total_Amount_incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_incl_Tax__c</fullName>
    <formula>Amount__c  +  GST_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (incl Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>